--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Global Food Security Association for Young Scientists
-subtitle: 全球粮食安全科学家联盟
+title: Asian Social Simulation Association
+subtitle: 亚洲社会仿真学会
 description: ''
 keywords:
 author: John Doe
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://www.thefoodsecurity.org
+url: https://www.computationalsocialscience.net
 permalink: :title/
 permalink_defaults:
 pretty_urls:
