--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ i18n_dir: :lang
 skip_render:
 
 _superCategories:
-  - posts
+  - events
+  - training
 
 # Writing
 new_post_name: :title.md # File name of new posts
