[fix]events和training对接新的category机制

--- a/themes/suka/_config.yml
+++ b/themes/suka/_config.yml
@@ -121,7 +121,10 @@ qrcode:
 
 # 文章列表是否显示标题
 _showCategoryTitle: false
-
+# events展示年份列表
+_eventsYearList: 2022,2020,2019,2017
+# training展示年份列表
+_trainingYearList: 2021,2020,2019
 # ---------------------------------------------------------------
 # Post Settings
 # ---------------------------------------------------------------
