--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
-category_dir: blogs
+category_dir: ""
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
@@ -89,7 +89,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 50
 pagination_dir: page
 
 # Include / Exclude file(s)
