--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ i18n_dir: :lang
 skip_render:
 
 _superCategories:
+  - news
   - events
   - training
 
@@ -89,7 +90,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 50
+per_page: 500
 pagination_dir: page
 
 # Include / Exclude file(s)
