--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ skip_render:
 _superCategories:
   - news
   - events
-  - training
+  - trainings
 
 # Writing
 new_post_name: :title.md # File name of new posts
